--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,6 +28,8 @@
   color: #61dafb;
 }
 
+.tab-content{height:80vh}
+.tab-content .tab-pane, .tab-content .tab-pane .card{height:100%}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
